création des fichiers de style

--- a/pages/home.html
+++ b/pages/home.html
@@ -1,1 +1,4 @@
 <h1>Bienvenue sur le site du restaurant Quai Antique</h1>
+<i class="bi bi-0-circle"></i>
+<p>Voici un paragraphe de test</p>
+<button class="btn btn-primary">Test Button</button>
