Finish home page

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           </p>
         </div>
         <div class="col-6 col-lg-4">
-          <a href="mailto:contact@quaiantique.com">contact@quaiantique.com</a>
+          <a href="mailto:contact@quaiantique.com">test</a>
         </div>
       </div>
     </footer>
