--- a/pages/galerie.html
+++ b/pages/galerie.html
@@ -3,3 +3,43 @@
     <h1>Galerie</h1>
   </div>
 </div>
+<div class="container">
+  <div class="row row-cols-2 row-cols-lg-3">
+    <div class="col p-3">
+      <div class="image-card text-white">
+        <img src="../images/food.jpg" class="rounded w-100" />
+        <p class="titre-image">Titre</p>
+      </div>
+    </div>
+    <div class="col p-3">
+      <div class="image-card text-white">
+        <img src="../images/chef.jpg" class="rounded w-100" />
+        <p class="titre-image">Titre</p>
+      </div>
+    </div>
+    <div class="col p-3">
+      <div class="image-card text-white">
+        <img src="../images/saumon.jpg" class="rounded w-100" />
+        <p class="titre-image">Titre</p>
+      </div>
+    </div>
+    <div class="col p-3">
+      <div class="image-card text-white">
+        <img src="../images/vin.jpg" class="rounded w-100" />
+        <p class="titre-image">Titre</p>
+      </div>
+    </div>
+    <div class="col p-3">
+      <div class="image-card text-white">
+        <img src="../images/table.jpg" class="rounded w-100" />
+        <p class="titre-image">Titre</p>
+      </div>
+    </div>
+    <div class="col p-3">
+      <div class="image-card text-white">
+        <img src="../images/plateau.jpg" class="rounded w-100" />
+        <p class="titre-image">Titre</p>
+      </div>
+    </div>
+  </div>
+</div>
