Finish page de la carte

--- a/pages/carte.html
+++ b/pages/carte.html
@@ -85,4 +85,148 @@
     </div>
   </div>
 </div>
-"
+<div class="container">
+  <h2 class="text-center text-primary p-4">La carte</h2>
+  <div class="columns bg-dark text-white p-3 rounded-4">
+    <ul class="nav nav-tabs" id="myTab" role="tablist">
+      <li class="nav-item" role="presentation">
+        <button class="nav-link active" id="Plats-tab" data-bs-toggle="tab" data-bs-target="#Plats-tab-pane" type="button" role="tab" aria-controls="Plats-tab-pane" aria-selected="true">Plats</button>
+      </li>
+      <li class="nav-item" role="presentation">
+        <button class="nav-link" id="Carte-vins-tab" data-bs-toggle="tab" data-bs-target="#Carte-vins-tab-pane" type="button" role="tab" aria-controls="Carte-vins-tab-pane" aria-selected="false">Carte des vins</button>
+      </li>
+    </ul>
+    <div class="tab-content text-start p-3" id="myTabContent">
+      <div class="tab-pane fade show active" id="Plats-tab-pane" role="tabpanel" aria-labelledby="Plats-tab" tabindex="0">
+        <p>Saumon snacké, compotée façon Basquaise aux encornets, riz rouge de Camargue et petits légumes <strong class="text-primary">21,00€</strong></p>
+        <p>Tartare de bœuf Charolais coupé au couteau, pommes grenailles et son bouquet de salade, pickles aux oignons rouges <strong class="text-primary">21,00€</strong></p>
+        <p>Tagliatelles du Moul’Ain des Fourmy, tomates cerises confites, légumes grillés de saison, parmesan et tapenade <i class="bi bi-leaf-fill"></i><strong class="text-primary">21,00€</strong></p>
+        <p>Tataki de thon et sa marinade, riz rouge de Camargue, petits légumes <strong class="text-primary">24,50€</strong></p>
+        <p>Magret de canard cuit en basse température, jus au épices doux, grenailles et petits légumes <strong class="text-primary">24,50€</strong></p>
+      </div>
+        <div class="tab-pane fade table-responsive" id="Carte-vins-tab-pane" role="tabpanel" aria-labelledby="Carte-vins-tab" tabindex="0">
+          <table class="table-dark w-100 vertical-align: middle">
+            <thead>
+              <tr>
+                <th scope="col">Une partie de notre sélection de vins</th>
+                <th scope="col">La bouteille</th>
+                <th scope="col">La 1/2 bouteille</th>
+              </tr>
+            </thead>
+            <thead class="table-group-divider">
+              <tr>
+                <th scope="col">Les vins blancs</th>
+                <th scope="col"></th>
+                <th scope="col"></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Coteaux du Layon AOP Domaine des Bohues | 2017</td>
+                <td>26,00 €</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>Côtes Catalanes « Cadireta » Dom Lafage | 2022</td>
+                <td>24,50 €</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>Bugey Roussette Mataret « Altesse » Dom. Tissot | 2020</td>
+                <td>24,00 €</td>
+              </tr>
+              <tr>
+                <td>Viognier « cuvée du Triya » Vignerons Ardéchois | 2022</td>
+                <td>24,00 €</td>
+              </tr><tr>
+                <td>Pouilly Fuissé Domaine Lassarat | 2022 et 1/2 btle 2018</td>
+                <td>45,00 €</td>
+                <td>35,00 €</td>
+              </tr><tr>
+                <td>Saint Véran  » cuvée Prestige » Domaine Lassarat | 2022</td>
+                <td>37,00 €</td>
+              </tr><tr>
+                <td>Mâcon « Village » Domaine Marin  | 2023</td>
+                <td>25,50 €</td>
+              </tr><tr>
+                <td>Petit-Chablis Dom. du Chardonnay  | 2022</td>
+                <td>32,50 €</td>
+                <td>24,00 €</td>
+              </tr><tr>
+                <td>Beaujolais « Fleur de Chardonnay » Dom. Clos du Fief | 2022</td>
+                <td>25,00 €</td>
+              </tr><tr>
+                <td>Pouilly-Fumé AOP Domaine de Breugnon | 2023</td>
+                <td>37,00 €</td>
+              </tr><tr>
+                <td>Saint Joseph « Ro-Rée » Dom. L. Chèze | 2022</td>
+                <td>43,00 €</td>
+              </tr><tr>
+                <td>Vacqueyras « Cuvée Fleurantine » Dom. La Fourmone  | 2023</td>
+                <td>31,00 €</td>
+              </tr><tr>
+                <td>Crozes-Hermitage « Les Alexandrins » N.Perrin | 2022</td>
+                <td>37,00 €</td>
+              </tr>
+            </tbody>
+            <thead class="table-group-divider">
+              <tr>
+                <th scope="col">Les vins rouges</th>
+                <th scope="col"></th>
+                <th scope="col"></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Vacqueyras « Le Poète » Dom La Fourmone | 2022 et 1/2 en 2023</td>
+                <td>32,00 €</td>
+                <td>24,00 € (50cl)</td>
+              </tr>
+              <tr>
+                <td>Côtes du Rhône « Nature Bio » Famille Perrin | 2021</td>
+                <td>22,50 €</td>
+              </tr>
+              <tr>
+                <td>Vacqueyras « Cuvée Novaé » Famille Gilly   | 2022</td>
+                <td>32,00 €</td>
+              </tr>
+              <tr>
+                <td>Cairanne  « Peyre Blanche » Famille Perrin | 2021</td>
+                <td>25,00 €</td>
+              </tr><tr>
+                <td>Saint-Joseph « Ro-Rée » Domaine Louis Chéze  | 2023 et 1/2 en 2022</td>
+                <td>41,00 €</td>
+                <td>29,00 €</td>
+              </tr><tr>
+                <td>Gigondas « Le secret » Dom La Fourmone | 2022</td>
+                <td>42,00 €</td>
+              </tr><tr>
+                <td>Châteauneuf du pape « Les Sinards » Famille Perrin  | 2021</td>
+                <td>55,00 €</td>
+              </tr><tr>
+                <td>Côte Rotie « La Giroflarie » Dom P. Jasmin  | 2022</td>
+                <td>85,00 €</td>
+              </tr><tr>
+                <td>Ventoux « Vindemio » Terra | 2020</td>
+                <td>23,50 €</td>
+              </tr><tr>
+                <td>Corbière « Essentielle » Dom. La Cendrillon  | 2018</td>
+                <td>28,00 €</td>
+              </tr><tr>
+                <td>Côtes du Roussillon  » Authentique  » Dom. Lafage | 2020</td>
+                <td>24,50 €</td>
+              </tr><tr>
+                <td>Côtes Catalanes « Narassa » Dom. Lafage | 2020</td>
+                <td>30,00 €</td>
+              </tr><tr>
+                <td>Terrasses du Larzac AOP « Les Casselles » | 2022</td>
+                <td>28,50 €</td>
+              </tr>
+            </tbody>
+          </table>
+          <p></p>
+          <p class="text-end small m-0">L’abus d’alcool est dangereux pour la santé, à consommer avec modération.</p>
+        </div>
+    </div>
+  </div>
+</div>
