--- a/pages/auth/signup.html
+++ b/pages/auth/signup.html
@@ -14,6 +14,7 @@
         placeholder="Votre nom"
         name="Nom"
       />
+      <div class="invalid-feedback">Merci d'indiquer votre nom</div>
     </div>
     <div class="mb-3">
       <label for="PrenomInput" class="form-label">Prénom</label>
@@ -24,6 +25,7 @@
         placeholder="Votre prénom"
         name="Prenom"
       />
+      <div class="invalid-feedback">Merci d'indiquer votre prénom</div>
     </div>
     <div class="mb-3">
       <label for="EmailInput" class="form-label">Email</label>
@@ -34,6 +36,7 @@
         placeholder="votremail@mail.fr"
         name="Email"
       />
+      <div class="invalid-feedback">Merci d'indiquer un email valide</div>
     </div>
     <div class="mb-3">
       <label for="PasswordInput" class="form-label">Mot de passe</label>
@@ -43,10 +46,16 @@
         id="PasswordInput"
         name="Password"
       />
+      <div class="invalid-feedback">
+        Le mot de passe n'est pas assez robuste : Au moins 8 caractères,
+        comprenant au moins 1 lettre majuscule, 1 minuscule, 1 chiffre et 1
+        caractère spécial
+      </div>
+      <div class="valid-feedback">Le mot de passe est robuste</div>
     </div>
     <div class="mb-3">
       <label for="ValidatePasswordInput" class="form-label"
-        >Validez votre mot de passe</label
+        >Confirmer votre mot de passe</label
       >
       <input
         type="password"
@@ -54,9 +63,19 @@
         id="ValidatePasswordInput"
         name="PasswordConfirm"
       />
+      <div class="invalid-feedback">
+        La confirmation n'est pas identique au mot de passe
+      </div>
     </div>
     <div class="text-center">
-      <button type="submit" class="btn btn-primary">Inscription</button>
+      <button
+        type="submit"
+        class="btn btn-primary"
+        id="btn-validation-inscription"
+        disabled
+      >
+        Inscription
+      </button>
     </div>
   </form>
   <div class="text-center pt-3">
