gestion de la connexion et déconnexion

--- a/pages/auth/signup.html
+++ b/pages/auth/signup.html
@@ -6,7 +6,7 @@
 <div class="container">
   <form>
     <div class="mb-3">
-      <label for="NomInput" class="form-label">Nom</label>
+      <label for="NomInput" class="form-label">Nom*</label>
       <input
         type="text"
         class="form-control"
@@ -17,7 +17,7 @@
       <div class="invalid-feedback">Merci d'indiquer votre nom</div>
     </div>
     <div class="mb-3">
-      <label for="PrenomInput" class="form-label">Prénom</label>
+      <label for="PrenomInput" class="form-label">Prénom*</label>
       <input
         type="text"
         class="form-control"
@@ -28,7 +28,7 @@
       <div class="invalid-feedback">Merci d'indiquer votre prénom</div>
     </div>
     <div class="mb-3">
-      <label for="EmailInput" class="form-label">Email</label>
+      <label for="EmailInput" class="form-label">Email*</label>
       <input
         type="email"
         class="form-control"
@@ -39,7 +39,7 @@
       <div class="invalid-feedback">Merci d'indiquer un email valide</div>
     </div>
     <div class="mb-3">
-      <label for="PasswordInput" class="form-label">Mot de passe</label>
+      <label for="PasswordInput" class="form-label">Mot de passe*</label>
       <input
         type="password"
         class="form-control"
@@ -55,7 +55,7 @@
     </div>
     <div class="mb-3">
       <label for="ValidatePasswordInput" class="form-label"
-        >Confirmer votre mot de passe</label
+        >Confirmer votre mot de passe*</label
       >
       <input
         type="password"
