--- a/pages/carte.html
+++ b/pages/carte.html
@@ -51,7 +51,7 @@
         </button>
       </li>
     </ul>
-    <div class="action-menu-buttons">
+    <div class="action-menu-buttons" data-show="admin">
       <a href="/editMenu" class="btn btn-outline-light"
         ><i class="bi bi-pencil"></i
       ></a>
