--- a/pages/auth/signin.html
+++ b/pages/auth/signin.html
@@ -7,7 +7,7 @@
 <div class="container">
   <form>
     <div class="mb-3">
-      <label for="EmailInput" class="form-label">Email</label>
+      <label for="EmailInput" class="form-label">Email*</label>
       <input
         type="email"
         class="form-control"
@@ -15,9 +15,12 @@
         placeholder="votremail@mail.fr"
         name="Email"
       />
+      <div class="invalid-feedback">
+        Le mail et le mot de passe ne correspondent pas
+      </div>
     </div>
     <div class="mb-3">
-      <label for="PasswordInput" class="form-label">Mot de passe</label>
+      <label for="PasswordInput" class="form-label">Mot de passe*</label>
       <input
         type="password"
         class="form-control"
@@ -26,7 +29,9 @@
       />
     </div>
     <div class="text-center">
-      <button type="submit" class="btn btn-primary">Connexion</button>
+      <button type="button" class="btn btn-primary" id="btnSignin">
+        Connexion
+      </button>
     </div>
   </form>
   <div class="text-center pt-3">
