--- a/pages/galerie.html
+++ b/pages/galerie.html
@@ -19,7 +19,7 @@
     <div class="col p-3">
       <div class="image-card text-white">
         <img src="../images/food.jpg" class="rounded w-100" />
-        <div class="action-image-buttons">
+        <div class="action-image-buttons" data-show="admin">
           <button
             type="button"
             class="btn btn-outline-light"
