--- a/pages/reservations/reserver.html
+++ b/pages/reservations/reserver.html
@@ -52,10 +52,11 @@
         placeholder="Combien vous êtes habituellement ?"
         value="4"
         name="NbConvives"
+        min="1"
       />
     </div>
     <div class="mb-3">
-      <label for="DateInput" class="form-label">Date</label>
+      <label for="DateInput" class="form-label">Date*</label>
       <input type="date" class="form-control" id="DateInput" name="Date" />
     </div>
     <div class="mb-3">
@@ -92,7 +93,14 @@
       </select>
     </div>
     <div class="text-center">
-      <button type="submit" class="btn btn-primary">Réserver</button>
+      <button
+        type="submit"
+        class="btn btn-primary"
+        id="btn-validation-reservation"
+        disabled
+      >
+        Réserver
+      </button>
       <button
         type="button"
         class="btn btn-danger"
