--- a/pages/auth/signup.html
+++ b/pages/auth/signup.html
@@ -4,7 +4,7 @@
   </div>
 </div>
 <div class="container">
-  <form>
+  <form id="formulaireInscription">
     <div class="mb-3">
       <label for="NomInput" class="form-label">Nom*</label>
       <input
@@ -12,7 +12,7 @@
         class="form-control"
         id="NomInput"
         placeholder="Votre nom"
-        name="Nom"
+        name="nom"
       />
       <div class="invalid-feedback">Merci d'indiquer votre nom</div>
     </div>
@@ -23,7 +23,7 @@
         class="form-control"
         id="PrenomInput"
         placeholder="Votre prénom"
-        name="Prenom"
+        name="prenom"
       />
       <div class="invalid-feedback">Merci d'indiquer votre prénom</div>
     </div>
@@ -34,7 +34,7 @@
         class="form-control"
         id="EmailInput"
         placeholder="votremail@mail.fr"
-        name="Email"
+        name="email"
       />
       <div class="invalid-feedback">Merci d'indiquer un email valide</div>
     </div>
@@ -44,7 +44,7 @@
         type="password"
         class="form-control"
         id="PasswordInput"
-        name="Password"
+        name="mdp"
       />
       <div class="invalid-feedback">
         Le mot de passe n'est pas assez robuste : Au moins 8 caractères,
