gestion d'une connexion utilisateur

--- a/pages/auth/signin.html
+++ b/pages/auth/signin.html
@@ -5,7 +5,7 @@
 </div>
 
 <div class="container">
-  <form>
+  <form id="signinForm">
     <div class="mb-3">
       <label for="EmailInput" class="form-label">Email*</label>
       <input
@@ -13,7 +13,7 @@
         class="form-control"
         id="EmailInput"
         placeholder="votremail@mail.fr"
-        name="Email"
+        name="email"
       />
       <div class="invalid-feedback">
         Le mail et le mot de passe ne correspondent pas
@@ -25,7 +25,7 @@
         type="password"
         class="form-control"
         id="PasswordInput"
-        name="Password"
+        name="mdp"
       />
     </div>
     <div class="text-center">
