--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <li class="nav-item" data-show="client">
                 <a class="nav-link" href="/allResa">Les réservations</a>
               </li>
-              <li class="nav-item" data-show="connected">
+              <li class="nav-item" data-show="client">
                 <a class="nav-link" href="account">Mon compte</a>
               </li>
               <li class="nav-item" data-show="disconnected">
