--- a/pages/galerie.html
+++ b/pages/galerie.html
@@ -5,6 +5,7 @@
 </div>
 
 <div class="container">
+  <!-- Bouton d'ajout de photo (visible uniquement par les admins) -->
   <div class="text-center">
     <button
       type="button"
@@ -15,6 +16,7 @@
       Ajouter une photo
     </button>
   </div>
+  <!-- Galerie d'image -->
   <div class="row row-cols-2 row-cols-lg-3">
     <div class="col p-3">
       <div class="image-card text-white">
@@ -71,6 +73,8 @@
       </div>
     </div>
   </div>
+
+  <!-- Bouton de réservation (visible par tout le monde) -->
   <div class="text-center">
     <a href="#" class="btn btn-primary">Réserver</a>
   </div>
